Fixed social buttons and footer alignment

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -44,7 +44,7 @@ p {
 /**/	border-bottom: solid #000;
 /**/}
 
-/*[Index/Home Text and Image]*/
+/*[Index.html Text and Image]*/
 /**/.HomeImageAndText {
 /**/	display: flex;
 /**/	height: 920px;
@@ -53,7 +53,7 @@ p {
 /**/	justify-content: center;
 /**/}
 /**/#HomeImage {
-/**/	width: 300px;
+/**/	width: 200px;
 /**/	height: auto;
 /**/}
 /**/#HomeText {
@@ -67,20 +67,33 @@ p {
 /**/	display: flex;
 /**/	background-color: #222;
 /**/	height: 23px;
+/**/    justify-content: center;
+/**/    align-items: center;
 /**/}
 /**/.Footer p {
 /**/	font-size: 1em;
 /**/}
 
-.SocialsTextAndButtons {
-
-}
-.ButtonImages {
-	height: 128px;
-	width: 128px;
-	background-color: #333;
-	cursor: pointer;
-	margin: 0px 5px;
-}
+/*[Socials.html Text and Image]*/
+/**/.SocialsTextAndButtons {
+/**/	display: flex;
+/**/	height: 920px;
+/**/	flex-direction: column;
+/**/	align-items: center;
+/**/	justify-content: center;
+/**/}
+/**/#SocialsButtons {
+/**/	margin-top: 15px;
+/**/	display: flex;
+/**/}
+/**/#SocialsButtons button {
+/**/	background-color: #333;
+/**/	margin: 0px 5px;
+/**/}
+/**/.ButtonImages {
+/**/	height: 128px;
+/**/	width: 128px;
+/**/	cursor: pointer;
+/**/}
 
 
